# fti_id

./: README.md  correct_labels.py  corrected_labelled_images.csv  get_labelled_images.py  labelled_images.csv  separate_imgs.py
TextDetector/: CMakeLists.txt  ImageBinarization.cpp  ImageBinarization.h  Singleton.h  TextDetector.cpp  TextDetector.h  main_save_boxes_to_file.cpp
TextDetector/BlobsLib/: CMakeCache.txt
TextDetector/debug/: Point2f.cpp  World.cpp  contours2.cpp  contours2.out  debug.cpp  debug.out  debug.py  debug.sh  drawContours.cpp  drawContours.out  drawContours.py  findContours_demo.cpp  findContours_demo.out  findContours_demo.sh
text_segmentation/: mnist_training.ipynb  mnist_training.py
text_segmentation/.ipynb_checkpoints/: binarisation-checkpoint.ipynb  mnist_training-checkpoint.ipynb
